tests/fixtures/compile_errors/not_in_scope_2.fe
contract Foo:

    pub def bar() -> u256:
        i: u256 = 0
        while i < 1:
            i = 1
            y: u256 = 1
        return y